--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Welcome to the curso GitHub</h1>
+    <p> A menos que se identifique específicamente como tal, el uso de propiedad intelectual de terceros por parte de Coursera no indica ninguna relación, patrocinio o respaldo entre Coursera y los propietarios de estas marcas registradas u otra propiedad intelectual.</p>
 </body>
 </html>
