--- a/index.html
+++ b/index.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+    <head>
+        <!--Todo lo relacionado con la descripcion de la web-->
+        <meta charset="UTF-8">
+        <!--Tipo de codificacion de caracteres-->
+        <meta name="description" content="Coca cola es una bebida azucarada, antes utilizada 
+        por nuestros ancestros para remedios curativos">
+        <!--Es es la descripcion que aparece cuando buscamos nuestra pagina en internet-->
+        <meta name="keywords" content="bebida, azucarada, gaseosa, cola">
+        <!--esta meta sirve para ingresar palabras reservadas
+        y  google en su bd busque estas palabras en nuestro sitio cuando alguien busca bebida-->
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Inicio - Coca cola</title>
+        <link rel="shortcut icon" href="img/favicon.png">
+        <!--para mostrar un icono en nuestra pagina-->
+        <link rel="stylesheet" href="">
+    </head>
 <body>
     <h1>Welcome to the curso GitHub</h1>
     <p> A menos que se identifique específicamente como tal, el uso de propiedad intelectual de terceros por parte de Coursera no indica ninguna relación, patrocinio o respaldo entre Coursera y los propietarios de estas marcas registradas u otra propiedad intelectual.</p>
